force-app/main/default/objects/caseman__Intake__c/fields/Approximate_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Monthly_Income__c</fullName>
    <description>Rough monthly income in USD. Used for benefits eligibility check (SNAP/TANF/Section 8 are needs-tested). Approximate is fine; survivors often don't know exact numbers.</description>
    <label>Approximate Monthly Income ($)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>