force-app/main/default/objects/caseman__Intake__c/fields/Childcare_Status__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Status__c</fullName>
    <description>Childcare situation. Drives Children's Support Group enrollment + childcare voucher referrals.</description>
    <label>Childcare Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Have reliable childcare</fullName><default>false</default><label>Have reliable childcare</label></value>
            <value><fullName>Need help finding childcare</fullName><default>false</default><label>Need help finding childcare</label></value>
            <value><fullName>Children old enough — not needed</fullName><default>false</default><label>Children old enough — not needed</label></value>
            <value><fullName>Not applicable — no children</fullName><default>false</default><label>Not applicable — no children</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>