force-app/main/default/objects/caseman__Intake__c/fields/Currently_Receiving_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Currently_Receiving_Benefits__c</fullName>
    <description>Which benefits the survivor already has. The auto-task generator skips applications for these — no point re-applying for what they already have.</description>
    <label>Currently Receiving</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SNAP</fullName><default>false</default><label>SNAP</label></value>
            <value><fullName>TANF</fullName><default>false</default><label>TANF</label></value>
            <value><fullName>WIC</fullName><default>false</default><label>WIC</label></value>
            <value><fullName>Medicaid / HIP</fullName><default>false</default><label>Medicaid / HIP</label></value>
            <value><fullName>Section 8 / Housing voucher</fullName><default>false</default><label>Section 8 / Housing voucher</label></value>
            <value><fullName>LIHEAP / energy assistance</fullName><default>false</default><label>LIHEAP / energy assistance</label></value>
            <value><fullName>SSI / SSDI</fullName><default>false</default><label>SSI / SSDI</label></value>
            <value><fullName>Unemployment Insurance</fullName><default>false</default><label>Unemployment Insurance</label></value>
            <value><fullName>None</fullName><default>false</default><label>None</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>