force-app/main/default/objects/caseman__Intake__c/fields/Employment_Status__c.field-meta.xml
<CustomField>
    <fullName>Employment_Status__c</fullName>
    <description>Current employment situation. Drives employment-related referrals (WorkOne, unemployment insurance) and task templates.</description>
    <label>Employment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Full-time</fullName><default>false</default><label>Full-time</label></value>
            <value><fullName>Part-time</fullName><default>false</default><label>Part-time</label></value>
            <value><fullName>Self-employed</fullName><default>false</default><label>Self-employed</label></value>
            <value><fullName>Unemployed — looking</fullName><default>false</default><label>Unemployed — looking</label></value>
            <value><fullName>Unemployed — not looking</fullName><default>false</default><label>Unemployed — not looking</label></value>
            <value><fullName>Disabled / unable to work</fullName><default>false</default><label>Disabled / unable to work</label></value>
            <value><fullName>Student</fullName><default>false</default><label>Student</label></value>
            <value><fullName>Retired</fullName><default>false</default><label>Retired</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>