force-app/main/default/objects/caseman__Intake__c/fields/Has_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_Bank_Account__c</fullName>
    <description>Does the survivor have access to a bank account? Many benefits prefer direct deposit; no → also flag financial-literacy referral.</description>
    <label>Has Bank Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Joint with abuser — unsafe</fullName><default>false</default><label>Joint with abuser — unsafe</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>