force-app/main/default/objects/caseman__Intake__c/fields/Has_Government_ID__c.field-meta.xml
<CustomField>
    <fullName>Has_Government_ID__c</fullName>
    <description>Does the survivor have a current government-issued photo ID? Without ID, most benefits applications fail — this is often task #1.</description>
    <label>Has Government ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
            <value><fullName>No — abuser took / destroyed</fullName><default>false</default><label>No — abuser took / destroyed</label></value>
            <value><fullName>No — expired / never had</fullName><default>false</default><label>No — expired / never had</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>