force-app/main/default/objects/caseman__Intake__c/fields/Transportation__c.field-meta.xml
<CustomField>
    <fullName>Transportation__c</fullName>
    <description>How the survivor gets around. Drives transportation-related service planning and bus-pass / ride-share referrals.</description>
    <label>Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Own car — reliable</fullName><default>false</default><label>Own car — reliable</label></value>
            <value><fullName>Own car — unreliable</fullName><default>false</default><label>Own car — unreliable</label></value>
            <value><fullName>Public transit</fullName><default>false</default><label>Public transit</label></value>
            <value><fullName>Rides from family / friends</fullName><default>false</default><label>Rides from family / friends</label></value>
            <value><fullName>Walking / no transportation</fullName><default>false</default><label>Walking / no transportation</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>