force-app/main/default/objects/caseman__Intake__c/fields/Website_Submission_Notes__c.field-meta.xml
<CustomField>
    <fullName>Website_Submission_Notes__c</fullName>
    <description>Captures the full website intake-form submission as structured text. Set automatically by the Netlify Function for submissions from sftsinc.com /get-help.html (full intake form). Includes safety status, urgency, household composition, needs, disabilities, story, referral source, and consent acknowledgment in human-readable form. Advocates use this to triage and then transfer relevant data to structured fields.</description>
    <label>Website Submission Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>