force-app/main/default/objects/caseman__Intake__c/listViews/New_Web_Intakes_24h.listView-meta.xml
<ListView>
    <fullName>New_Web_Intakes_24h</fullName>
    <columns>NAME</columns>
    <columns>caseman__Contact__c</columns>
    <columns>Risk_Level__c</columns>
    <columns>Shelter_Requested__c</columns>
    <columns>Children_Present__c</columns>
    <columns>Number_of_Children__c</columns>
    <columns>Completeness_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>New Web Intakes (Last 24h)</label>
</ListView>